[package]
name = "file"
version = "0.1.0"
edition = "2021"

[dependencies]


clap = { version = "4.1.8", features = ["derive"] }
local-ip-address = "0.5.1"
qrcode-generator = "4.1.7"
tokio = { version = "1.26", features = ["full"] }
warp = "0.3.3"
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true   